--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,21 @@
   color-scheme: #1c1c1c;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+/* Efek blink (berkedip) */
+.blink {
+  animation: blinkEffect 0.5s ease-in-out 7; /* kedip 3x */
+}
+
+@keyframes blinkEffect {
+  0%, 100% { background-color: transparent; }
+  50% { background-color: rgba(67, 56, 202, 0.3); } /* kuning lembut */
+}
+
 /* 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
